<resources>
    <string name="app_name">Calc (Kotlin with exp4j lib)</string>
    <string name="btn_clear">C</string>
    <string name="open_bracket_btn">(</string>
    <string name="close_bracket_btn">)</string>
    <string name="division_btn">/</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="multyply_btn">X</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_plus">+</string>
    <string name="btn_point">.</string>
    <string name="btn_0">0</string>
    <string name="btn_back">Back</string>
    <string name="btn_result">=</string>
</resources>