<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/math_operation"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/clear_btn"
                style="@style/ActionButton"
                android:text="@string/btn_clear" />

            <TextView
                android:id="@+id/open_bracket_btn"
                style="@style/ActionButton"
                android:text="@string/open_bracket_btn" />

            <TextView
                android:id="@+id/close_bracket_btn"
                style="@style/ActionButton"
                android:text="@string/close_bracket_btn" />

            <TextView
                android:id="@+id/division_btn"
                style="@style/ActionButton"
                android:text="@string/division_btn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_7"
                style="@style/NumberButton"
                android:text="@string/btn_7" />

            <TextView
                android:id="@+id/btn_8"
                style="@style/NumberButton"
                android:text="@string/btn_8" />

            <TextView
                android:id="@+id/btn_9"
                style="@style/NumberButton"
                android:text="@string/btn_9" />

            <TextView
                android:id="@+id/multiply_btn"
                style="@style/ActionButton"
                android:text="@string/multyply_btn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_4"
                style="@style/NumberButton"
                android:text="@string/btn_4" />

            <TextView
                android:id="@+id/btn_5"
                style="@style/NumberButton"
                android:text="@string/btn_5" />

            <TextView
                android:id="@+id/btn_6"
                style="@style/NumberButton"
                android:text="@string/btn_6" />

            <TextView
                android:id="@+id/btn_minus"
                style="@style/ActionButton"
                android:text="@string/btn_minus"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_1"
                style="@style/NumberButton"
                android:text="@string/btn_1" />

            <TextView
                android:id="@+id/btn_2"
                style="@style/NumberButton"
                android:text="@string/btn_2" />

            <TextView
                android:id="@+id/btn_3"
                style="@style/NumberButton"
                android:text="@string/btn_3" />

            <TextView
                android:id="@+id/btn_plus"
                style="@style/ActionButton"
                android:text="@string/btn_plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_point"
                style="@style/NumberButton"
                android:text="@string/btn_point"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_0"
                style="@style/NumberButton"
                android:text="@string/btn_0" />

            <TextView
                android:id="@+id/btn_back"
                style="@style/NumberButton"
                android:text="@string/btn_back" />

            <TextView
                android:id="@+id/btn_result"
                style="@style/ActionButton"
                android:text="@string/btn_result" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>